plugins {
    id 'java'
    id 'kotlin'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

javafx {
    version = "13"
    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.media', 'javafx.swing', 'javafx.web' ]
}

application {
    applicationDefaultJvmArgs = ["--add-opens=javafx.graphics/javafx.scene=tornadofx"]

    mainClassName = 'sudoku.desktop/com.github.netomi.sudoku.trainer.SudokuApp'
}

sourceCompatibility = '11'
targetCompatibility = '11'

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
    kotlinOptions.freeCompilerArgs = [
        "-Xjvm-default=enable"
    ]
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
    kotlinOptions.freeCompilerArgs = [
        "-Xjvm-default=enable"
    ]
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': mainClassName
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

repositories {
    mavenLocal()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    implementation "com.github.netomi.sudoku:sudoku-solver-jvm:0.2-SNAPSHOT"

    implementation "no.tornado:tornadofx:2.0.0-SNAPSHOT"
    implementation "com.github.bkenn:kfoenix:0.1.3"
    implementation "com.jfoenix:jfoenix:9.0.10"

    // junit 5
    testCompile     "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testCompile     "org.junit.jupiter:junit-jupiter-params:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
}
